added minor revisions.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <!-- Quiz questions and answers -->
           <div id="questionDiv" style="display: none">
             <p id="questionTitle" class="pb-3 text-left fw-bold"></p>
-            <div class="pl-5 pt-2 pb-3 m-2 d-flex flex-column align-items-start">
+            <div class="pl-5 pt-2 pb-3 m-2 d-flex flex-column align-items-start allButtons">
               <p><button id="btn-0" class="btn btn-outline-success"></button></p>
               <p><button id="btn-1" class="btn btn-outline-success"></button></p>
               <p><button id="btn-2" class="btn btn-outline-success"></button></p>
